--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -1,7 +1,3 @@
-% This file was created with JabRef 2.10.
-% Encoding: Cp1252
-
-
 @InProceedings{conf/osdi/FordHLTBC96,
   Title                    = {{Microkernels Meet Recursive Virtual Machines.}},
   Author                   = {Ford, Bryan and Hibler, Mike and Lepreau, Jay and Tullmann, Patrick and Back, Godmar and Clawson, Stephen},
@@ -99,17 +95,12 @@
   X-fetchedfrom            = {Bibsonomy}
 }
 
-@InProceedings{art:blan,
-  Title                    = {{The Xen-Blanket: virtualize once, run everywhere}},
-  Author                   = {Williams, Dan and Jamjoom, Hani and Weatherspoon, Hakim},
-  Booktitle                = {{EuroSys}},
-  Year                     = {2012},
-  Pages                    = {113--126},
-
-  Bibsource                = {DBLP, http://dblp.uni-trier.de},
-  Crossref                 = {DBLP:conf/eurosys/2012},
-  Ee                       = {http://doi.acm.org/10.1145/2168836.2168849}
-}
+@inproceedings{art:blan,
+ author = {Williams, Dan and Jamjoom, Hani and Weatherspoon, Hakim},
+ title = {{The Xen-Blanket: Virtualize Once, Run Everywhere}},
+ booktitle = {{ACM European Conference on Computer Systems (EUROSYS)}},
+ year = {2012},
+} 
 
 @Misc{bug:kvm,
   Title                    = {{Xen as L1 hypervisor issue}},
@@ -179,18 +170,15 @@
   Url                      = {http://doi.acm.org/10.1145/1165389.945462}
 }
 
-@InProceedings{turtle:ibm,
-  Title                    = {{The Turtles Project: Design and Implementation of Nested Virtualization}},
-  Author                   = {Ben-Yehuda, Muli and Day, Michael D. and Dubitzky, Zvi and Factor, Michael and Har'El, Nadav and Gordon, Abel and Liguori, Anthony and Wasserman, Orit and Yassour, Ben-Ami},
-  Booktitle                = {{OSDI '10: 9th USENIX Symposium on Opearting Systems Design and Implementation}},
-  Year                     = {2010},
-  Publisher                = {USENIX Association},
+@inproceedings{turtle:ibm,
+ author = {Ben-Yehuda, Muli and Day, Michael and Dubitzky, Zvi and Factor, Michael and Har'El, Nadav and Gordon, Abel and Liguori, Anthony and Wasserman, Orit and Yassour, Ben-Ami},
+ title = {{The Turtles Project: Design and Implementation of Nested Virtualization}},
+ booktitle = {{USENIX Symposium on Operating Systems Design and Implementation (OSDI)}},
+ year = {2010},
+} 
 
-  Citeulike-article-id     = {7902003},
-  Location                 = {Vancouver, BC, Canada}
-}
 
-@Other{nested:berghmans,
+@misc{nested:berghmans,
   Title                    = {{Nesting Virtual Machines in Virtualization Test Frameworks}},
   Author                   = {Berghmans, Oliver},
   Year                     = {2010}
@@ -455,11 +443,10 @@
   X-fetchedfrom            = {Bibsonomy}
 }
 
-@Article{vmcs:nakajima,
+@misc{vmcs:nakajima,
   Title                    = {{Making nested virtualization real by using hardware virtualization features}},
   Author                   = {Nakajima, Jun},
   Year                     = {2013},
-
   Url                      = {http://events.linuxfoundation.org/sites/events/files/cojp13_nakajima.pdf}
 }
 
@@ -622,7 +609,7 @@
   Url                      = {http://dl.acm.org/citation.cfm?id=2170444.2170460}
 }
 
-@Other{xclo:blank,
+@misc{xclo:blank,
   Title                    = {{Plug into the Supercloud}},
   Address                  = {Los Alamitos, CA, USA},
   Author                   = {Williams, Dan and Jamjoom, Hani and Weatherspoon, Hakim},
